--- a/src/App.css
+++ b/src/App.css
@@ -1,282 +1,13 @@
-.library
-{
-  margin-top: 5px;
-}
-
-.reader
-{
-  font-family: 'Literata', serif;
-  font-size: large;
-  margin-top: 5px;
-  display: grid;
-  grid-template-columns: 32vw 1px 32vw;
-  overflow:hidden;
-  column-gap: 2vw;
-  justify-content: center;
-}
-
-.page
-{
-  text-align: justify;
-  overflow: hidden;
-}
-
-#left-page
-{
-  padding: 10px;
-  text-overflow: ellipsis;
-}
-
-#right-page
-{
-  padding: 10px;
-  text-overflow: ellipsis;
-}
-
-.title
-{
-  padding-top: 6px;
-  padding-left: 12px;
-  padding-right: 12px;
-  font-size: calc(6px + 1vmin);
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.author
-{
-  padding-left: 12px;
-  padding-right: 12px;
-  font-style: italic;
-  font-size: calc(6px + 1vmin);
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.book
-{
-  display: grid;
-  overflow: auto;
-  border: 0px solid whitesmoke;
-  border-radius: 12px;
-  max-width: 12rem; 
-  max-height: 26rem;
-  background-color: #402565;
-}
-
-.cover
-{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  aspect-ratio: 0.75;
-  background-color: slategrey;
-}
-
-.cover-text
-{
-  overflow: hidden;
-  text-overflow: ellipsis;
-  padding: 16px;
-  text-align: center;
-}
-
-.cover-image
-{
-  width: 100%;
-  height: 100%;
-}
-
-.shelf
-{
-  display: grid;
-  justify-content: center;
-  grid-template-columns: repeat(8, 208px);
-  grid-template-rows: auto;
-  row-gap: 12px;
-  column-gap: 12px;
-}
-
-
-@media only screen and (max-width: 768px) {
-  /* For mobile phones: */
-  .shelf
-  {
-    display: grid;
-    grid-template-columns: repeat(2, 208px);
-    row-gap: 12px;
-    column-gap: 12px;
-  }
-
-}
-
-@media only screen and (min-width: 768px) and (max-width: 992px) {
-  .shelf
-  {
-    display: grid;
-    grid-template-columns: repeat(3, 208px);
-    row-gap: 12px;
-    column-gap: 12px;
-  }
-  #upload:after
-  {
-    content: " Books";
-  }
-}
-
-@media only screen and (min-width: 992px) and (max-width: 1492px) {
-  .shelf
-  {
-    display: grid;
-    grid-template-columns: repeat(4, 208px);
-    row-gap: 12px;
-    column-gap: 12px;
-  }
-  #upload:after
-  {
-    content: " Books";
-  }
-}
-
-@media only screen and (min-width: 1492px) and (max-width: 1692px) {
-  .shelf
-  {
-    display: grid;
-    grid-template-columns: repeat(6, 208px);
-    row-gap: 12px;
-    column-gap: 12px;
-  }
-  #upload:after
-  {
-    content: " Books";
-  }
-}
-
-
-@media only screen and (min-width: 1692px) {
-  .shelf
-  {
-    display: grid;
-    grid-template-columns: repeat(8, 208px);
-    row-gap: 12px;
-    column-gap: 12px;
-  }
-  #upload:after
-  {
-    content: " Books";
-  }
-}
-
-
-.read-btn
-{
-  margin-top: 6px;
-  padding: 4px;
-  color: whitesmoke;
-  border: 0;
-  width: 100%;
-  cursor: pointer;
-}
-
-.read-btn:hover
-{
-  background-color: #1a634e;
-}
-
-.status
-{
-  width: 100%;
-  height: 7px;
-  border: 0;
-  margin-bottom: 0px;
-  margin-top: 0px;
-}
-
-.options
-{
-  margin-bottom: 16px;
-  margin-top: 10px;
-  display: flex;
-  overflow: auto;
-  align-items:center;
-  gap: 10px;
-}
-
-.option
-{
-  max-width: 120px;
-  min-width: 100px;
-  border-radius: 16px;
-  border: 1px solid #ffffff;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 3px;
-  padding-bottom: 3px;
-  background-color: #1f1a24;
-  color: whitesmoke;
-  cursor: pointer;
-}
-
-.option:hover, .option:focus
-{
-  background-color: #332940;
-}
-
-.option:active
-{
-  background-color: #433357;
-}
-
 #theme
 {
   border-radius: 50%;
   border: 0;
-  width: 35px;
-  height: 35px;
-  position: absolute;
-  bottom: 30px;
-  right: 30px;
+  width: 32px;
+  height: 32px;
 }
-
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-}
-
-#heading
+.floating-panel
 {
-  margin-bottom: 8px;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  position:absolute;
+  top: 20px;
+  right: 20px;
 }
