--- a/src/Pages/Reader.css
+++ b/src/Pages/Reader.css
@@ -3,28 +3,37 @@
     .reader
     {
         font-size: medium;
-        grid-template-columns: 95vw 0 0;
-        grid-template-rows: 100vh;
-        align-self: start;
+        grid-template-columns: 90vw;
     }
-    
+    #right-page
+    {
+        display: none;
+    }
 }
   
 @media only screen and (min-width: 768px) and (max-width: 992px) {
     .reader
     {
         font-size: large;
-        grid-template-columns: 80vw 0 0;
-        grid-template-rows: 100vh;
+        grid-template-columns: 80vw;
+    }
+    #right-page
+    {
+        display: none;
     }
 }
   
 @media only screen and (min-width: 992px) and (max-width: 1492px) {
     .reader
     {
-        font-size: large;
-        grid-template-columns: 70vw 0 0;
-        grid-template-rows: 100vh;
+        font-size: medium;
+        grid-template-columns: 45vw 1px 45vw;
+    }
+    #page-border
+    {
+        border-left: 1px solid grey;
+        border-image : linear-gradient(transparent, grey, transparent) 1;
+        height: 100%;
     }
 }
   
@@ -32,14 +41,13 @@
     .reader
     {
         font-size: large;
-        grid-template-columns: 40vw 1px 40vw;
-        grid-template-rows: 100vh;
+        grid-template-columns: 35vw 1px 35vw;
     }
     #page-border
     {
         border-left: 1px solid grey;
         border-image : linear-gradient(transparent, grey, transparent) 1;
-        height: 90vh;
+        height: 100%;
     }
 }
   
@@ -48,14 +56,66 @@
     .reader
     {
         font-size: large;
-        grid-template-columns: 30vw 1px 30vw;
-        grid-template-rows: 100vw;
+        grid-template-columns: 35vw 1px 35vw;
     }
     #page-border
     {
         border-left: 1px solid grey;
         border-image : linear-gradient(transparent, grey, transparent) 1;
-        height: 90vh;
+        height: 100%;
     }
 }
+
+.content
+{
+    display: flex;
+    align-items: center;
+}
   
+.reader
+{
+    font-family: 'Literata', serif;
+    display: grid;
+    column-gap: 2vw;
+    padding-top: 40px;
+    justify-content: center;
+}
+
+.page
+{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: justify;
+}
+
+
+#exit-btn
+{
+    background-color: grey;
+    color: aliceblue;
+    font-size: large;
+    border-radius: 50%;
+    border: 0;
+    width: 32px;
+    height: 32px;
+    margin-left: 15px;
+}
+
+#progress
+{
+    width: 67vw;
+}
+
+#progress-text
+{
+    font-size: medium;
+    padding-right: 10px;
+}
+
+.controls
+{
+    display: flex;
+    align-items: center;
+    position: fixed;
+    bottom: 30px;
+}
